src/objects/Appeal__c.object
<CustomObject>
    <fields>
        <fullName>ALJ_Hearing_Detail__c</fullName>
        <label>ALJ Hearing - Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ALJ_Hearing__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Covered CA</fullName>
                </value>
                <value>
                    <fullName>DHCS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALJ_Hearing__c</fullName>
        <label>ALJ Hearing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_No_Yes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agency_Appeal_Detail__c</fullName>
        <label>Agency Appeal - Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Agency_Appeal__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CCI/CMC Health Care</fullName>
                </value>
                <value>
                    <fullName>CDI</fullName>
                </value>
                <value>
                    <fullName>County Indigent Care program</fullName>
                </value>
                <value>
                    <fullName>County - IHSS</fullName>
                </value>
                <value>
                    <fullName>Covered CA</fullName>
                </value>
                <value>
                    <fullName>DHCS</fullName>
                </value>
                <value>
                    <fullName>DMHC Complaint</fullName>
                </value>
                <value>
                    <fullName>DMHC IMR</fullName>
                </value>
                <value>
                    <fullName>DOL</fullName>
                </value>
                <value>
                    <fullName>Medicare Appeal Council Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agency_Appeal__c</fullName>
        <label>Agency Appeal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_No_Yes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appeal_Agency_Other__c</fullName>
        <label>Appeal Agency - Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appeal_Problem_Other__c</fullName>
        <label>Appeal Problem - Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appeal_Problem__c</fullName>
        <label>Problem w/Appeal (if any)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agency/Health Plan did not inform consumer of appeal rights</fullName>
                </value>
                <value>
                    <fullName>Agency/Health Plan provided unclear/incomplete notice of appeal rights</fullName>
                </value>
                <value>
                    <fullName>Agency/ health plan lost or never responded to appeal</fullName>
                </value>
                <value>
                    <fullName>Agency/health plan did not comply with timeliness for appeal</fullName>
                </value>
                <value>
                    <fullName>Health care provider unwilling to assist consumer with appeal process</fullName>
                </value>
                <value>
                    <fullName>Consumer lost at first level of appeal process</fullName>
                </value>
                <value>
                    <fullName>Consumer did not submit documentation in timely manner</fullName>
                </value>
                <value>
                    <fullName>No face to face hearing</fullName>
                </value>
                <value>
                    <fullName>Procedural problems</fullName>
                </value>
                <value>
                    <fullName>Other problem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTM__c</fullName>
        <label>CTM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_No_Yes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalation_to_Agency_Detail__c</fullName>
        <label>Escalation to Agency - Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Escalation_to_Agency__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>County Indigent Care Program</fullName>
                </value>
                <value>
                    <fullName>County - IHSS</fullName>
                </value>
                <value>
                    <fullName>Covered CA</fullName>
                </value>
                <value>
                    <fullName>Medi-Cal County</fullName>
                </value>
                <value>
                    <fullName>Medi-Cal Managed Care Ombuds</fullName>
                </value>
                <value>
                    <fullName>Medi-Cal Health Care Options</fullName>
                </value>
                <value>
                    <fullName>Medi-Cal Mental Health Care Ombuds</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalation_to_Agency_Other__c</fullName>
        <label>Escalation to Agency - Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation_to_Agency__c</fullName>
        <label>Escalation to Agency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_No_Yes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expedited__c</fullName>
        <label>Expedited?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_No_Yes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Family Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Appeals</relationshipLabel>
        <relationshipName>Appeals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grievance_Against_Plan__c</fullName>
        <label>Grievance Against Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_No_Yes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HHS_Appeal_Detail__c</fullName>
        <label>HHS Appeal - Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HHS_Appeal__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HHS Tax Exemptions</fullName>
                </value>
                <value>
                    <fullName>HHS, Office of Civil Rights</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HHS_Appeal__c</fullName>
        <label>HHS Appeal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_No_Yes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Informal_Review_with_Plan__c</fullName>
        <label>Informal Review with Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_No_Yes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Judicial_Review__c</fullName>
        <label>Judicial Review</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_No_Yes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outcome_of_Appeal__c</fullName>
        <label>Outcome of Appeal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Granted Client Claim</fullName>
                </value>
                <value>
                    <fullName>Problem resolved after agency escalation</fullName>
                </value>
                <value>
                    <fullName>Favorable Conditional Withdrawal</fullName>
                </value>
                <value>
                    <fullName>Denied Client Claim</fullName>
                </value>
                <value>
                    <fullName>Program declined representation due to lack of merits</fullName>
                </value>
                <value>
                    <fullName>Client withdrew hearing request</fullName>
                </value>
                <value>
                    <fullName>Client Declined Our Services/Loss of Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_Health_Plan</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which problem is this appeal tied to?</inlineHelpText>
        <label>Problem</label>
        <referenceTo>Problem__c</referenceTo>
        <relationshipLabel>Appeals</relationshipLabel>
        <relationshipName>Appeals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Who_Filed_the_Appeal_Other__c</fullName>
        <label>Who Filed the Appeal - Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_Filed_the_Appeal__c</fullName>
        <label>Who Filed the Appeal?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Advocate</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Appeal</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Appeal-{0000000}</displayFormat>
        <label>Appeal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appeals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Lock_appeal_record_after_case_closure</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT(ISNEW()), 
ISPICKVAL( Problem__r.Case__r.Status , &quot;Closed&quot;) 
)</errorConditionFormula>
        <errorMessage>You cannot update the appeal record once the related case has been closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Plan_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Plan__c , &quot;&quot;)
&amp;&amp;
OR(
   ISPICKVAL( Grievance_Against_Plan__c ,&quot;Yes&quot;),
   ISPICKVAL( Informal_Review_with_Plan__c ,&quot;Yes&quot;)
)</errorConditionFormula>
        <errorDisplayField>Plan__c</errorDisplayField>
        <errorMessage>Plan is required</errorMessage>
    </validationRules>
</CustomObject>